tests/core/snapshots/yaml-nested-unions.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  testVar0(u: T1Input!): U
  testVar1(u: T2Input!): U
  testVar2(u: T3Input!): U
  testVar3(u: T4Input!): U
  testVar4(u: T5Input!): U
}

type T1 {
  t1: String
}

input T1Input {
  t1: String
}

type T2 {
  t2: Int
}

input T2Input {
  t2: Int
}

type T3 {
  t3: Boolean
  t33: Float!
}

input T3Input {
  t3: Boolean
  t33: Float!
}

type T4 {
  t4: String
}

input T4Input {
  t4: String
}

type T5 {
  t5: Boolean
}

input T5Input {
  t5: Boolean
}

union U = T1 | T2 | T3 | T4 | T5

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
